--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   intl_phone_number_input: ^0.7.4
+  go_router: ^14.8.1
 
 dev_dependencies:
   flutter_test:
