--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   go_router: ^14.8.1
   html: ^0.15.5
   http: any
+  google_maps_flutter: ^2.2.5
 
 dev_dependencies:
   flutter_test:
