--- a/API/genqlient.yaml
+++ b/API/genqlient.yaml
@@ -1,6 +1,6 @@
 # Default genqlient config; for full documentation see:
 # https://github.com/Khan/genqlient/blob/main/docs/genqlient.yaml
-schema: consumer_schema.graphql
+schema: schema.graphql
 operations:
 - internal/services/queries.graphql
 generated: internal/services/genqlient.go
