Fix Docker build v0.1.0-deployment-test2

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/API
+  IMAGE_NAME: ${{ github.repository }}/api
   TAG: ${{ github.event.client_payload.tag }}
 
 
