--- a/.github/workflows/flutter-release.yml
+++ b/.github/workflows/flutter-release.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Set version in pubspec.yaml
         run: |
-          export VERSION="${TAG#v}"
-          sed -iE "s/^(version: ).*$/\1${VERSION}/" pubspec.yaml
+          VERSION="${TAG#v}"
+          sed -i -E "s/^(version: ).*$/version: ${VERSION}/" pubspec.yaml
 
       - name: Get Release data
         id: release_data
