--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
     sdk: flutter
   google_fonts: ^4.0.3
   flutter_secure_storage: 9.2.4
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  url_launcher: ^6.1.7
+  geolocator: ^11.0.0
+  permission_handler: ^11.3.1
   cupertino_icons: ^1.0.2
   intl_phone_number_input: ^0.7.4
   go_router: ^14.8.1
@@ -43,6 +43,7 @@ dependencies:
   http: any
   google_maps_flutter: ^2.2.5
 
+  equatable: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
