Fix a bug crashing the api service
Prior to this commit, when running docker compose up and the postgres container was being created (not restarted), the api service would crash because of an unresponsive database (as it is for a little while after being started)

--- a/API/compose.yml
+++ b/API/compose.yml
@@ -9,6 +9,7 @@ services:
       POSTGRES_PASSWORD: root
       POSTGRES_DATABASE: rideme
       POSTGRES_TIMEZONE: Europe/Bucharest
+    restart: on-failure
     ports:
       - '8000:8000'
     depends_on:
