--- a/API/compose.yml
+++ b/API/compose.yml
@@ -18,6 +18,8 @@ services:
 
   postgres:
     image: 'postgres:latest'
+    ports:
+      - '5432:5432'
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
@@ -39,6 +41,8 @@ services:
 
   mongo:
     image: mongo
+    ports:
+      - '27017:27017'
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
