--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   equatable: any
   image_picker: ^1.0.4
+  location: ^5.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
