--- a/API/compose.yml
+++ b/API/compose.yml
@@ -2,22 +2,22 @@ services:
   api:
     build: .
     environment:
-      AUTH_URL: "http://auth-service:8080/graphql"
+      AUTH_URL: http://auth-service:8080/graphql
+      POSTGRES_CONNECTION: "postgresql://root:root@postgres/rideme"
     restart: on-failure
     ports:
       - '8000:8000'
     depends_on:
+      - postgres
       - auth-service
 
-  # postgres:
-  #   image: 'postgres:latest'
-  #   restart: always
-  #   ports:
-  #     - '5432:5432'
-  #   environment:
-  #     POSTGRES_USER: root
-  #     POSTGRES_PASSWORD: root
-  #     POSTGRES_DB: rideme
+  postgres:
+    image: 'postgres:latest'
+    restart: always
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: rideme
 
   auth-service:
     image: ghcr.io/team-evian-fiicode25/authentication:v0.7.1
