--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -73,6 +73,7 @@ flutter:
   assets:
     - assets/legal/terms_of_service.txt
     - assets/legal/privacy_policy.txt
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
